# stylegan3-vj-app

./: README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml  server.py
backend/stylegan3vj/: create_video.py  feature_extraction.py  gen_images.py
front/: Dockerfile  app.py  pyproject.toml
