[tool.poetry]
name = "stylegan3-vj front"
version = "0.1.0"
description = ""
authors = ["Ryo Okada"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.82.0"
httpx = "^0.18.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"